<resources>
    <string name="app_name">LDM_Guia5_HC98I04001</string>


    <string name="titulo">Guía 5</string>
    //botones activy main
    <string name="btnCalculadora">CALCULADORA</string>
    <string name="btnMLogin">LOGIN</string>
    <string name="btnDatos">MIS DATOS</string>
    <string name="btnConver">Conversations</string>
    //Login
    <string name="userhint">Username</string>
    <string name="passhint">Password</string>
    <string name="lblTituloLogin">TimePlan</string>
    <string name="btnLogin">LOGIN</string>

    <string name="lblOperacion">123+456=579</string>
    <string name="btnAC">AC</string>
    <string name="btnDEL">DEL</string>
    <string name="btnMas">+</string>
    <string name="btnMenos">-</string>

    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnMult">*</string>

    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btnDiv">/</string>

    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btnIgual">=</string>
    <string name="btnParentesisIzq">(</string>
    <string name="btnParentesisDer">)</string>
    <string name="btnParentesisPunto">.</string>
    <string name="btnPorcen">%</string>
    <string name="btn0">0</string>
    <string name="btn00">00</string>
    <string name="btnPI">π</string>
    <string name="btnINV">INV</string>
    <string name="btnsin">sin</string>
    <string name="btncos">cos</string>
    <string name="btnDeg">DEG</string>
    <string name="btnln">ln</string>
    <string name="btne">e</string>
    <string name="btnlog">log</string>
    <string name="btntan">tan</string>
    <string name="btntad">!</string>
    <string name="btnpotencia">^</string>
    <string name="btnporaiz">√</string>
    <string name="txtPI">3.1415926535897932384626433832795</string>
    //Activity Mostrar Datos
    <string name="txtMostrarDatos">Datos del Estudiante:</string>
    <string name="txtNombre">Nombre:Janet Carolina Huezo Castaneda</string>
    <string name="txtCodigo">Código: HC98-I04-001</string>
</resources>