<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    android:orientation="vertical"
    tools:context="com.example.LDM_Guia5_HC98I04001.CalculadoraActivity">

    <TextView
        android:id="@+id/txtEntrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/lblOperacion"
        android:textAlignment="textEnd"
        android:textColor="@color/cardview_light_background"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtSalida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="25dp"
        android:textAlignment="textEnd"
        android:textColor="@color/cardview_light_background"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/cardview_dark_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/press_buttonotros"
                android:text="@string/btnParentesisIzq"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btnDEL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/press_buttonotros"
                android:text="@string/btnParentesisDer"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnMas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/press_buttonsignos"
                android:text="@string/btnPorcen"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnMenos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/press_buttonsignos"
                android:text="@string/btnDiv"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/press_buttonnumeros"
                android:text="@string/btn7" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/press_buttonnumeros"
                android:text="@string/btn8" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/press_buttonnumeros"
                android:text="@string/btn9" />

            <Button
                android:id="@+id/btnMult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/press_buttonsignos"
                android:text="@string/btnMult"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/press_buttonnumeros"
                android:text="@string/btn4" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/press_buttonnumeros"
                android:text="@string/btn5" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/press_buttonnumeros"
                android:text="@string/btn6" />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/press_buttonsignos"
                android:text="@string/btnMenos"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/press_buttonnumeros"
                android:text="@string/btn1" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/press_buttonnumeros"
                android:text="@string/btn2" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/press_buttonnumeros"
                android:text="@string/btn3" />

            <Button
                android:id="@+id/btnIgual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/press_buttonsignos"
                android:text="@string/btnMas"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8">

            <Button
                android:id="@+id/btn0"
                android:layout_width="27dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/press_buttonnumeros"
                android:text="@string/btn0" />

            <Button
                android:id="@+id/btn"
                android:layout_width="27dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/press_buttonnumeros"
                android:text="@string/btn00" />

            <Button
                android:id="@+id/btn10"
                android:layout_width="27dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/press_buttonnumeros"
                android:text="@string/btnParentesisPunto" />

            <Button
                android:id="@+id/btn11"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/press_buttonnumeros"
                android:text="@string/btnIgual" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>