<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.LDM_Guia5_HC98I04001.MisDatosAcitvity">

  <TextView
      android:id="@+id/txtTituloDatos"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="99dp"
      android:text="@string/txtMostrarDatos"
      android:textColor="@color/cardview_light_background"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toTopOf="@+id/txtNombre"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/txtNombre"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="178dp"
      android:text="@string/txtNombre"
      android:textAlignment="center"
      android:textColor="@color/cardview_light_background"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/txtCodigo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="290dp"
      android:text="@string/txtCodigo"
      android:textColor="@color/cardview_light_background"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>